--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -144,7 +144,13 @@ android {
         }
     }
     signingConfigs {
-        debug {
+        release {
+            storeFile file('lines.keystore')
+            storePassword 'panasonic'
+            keyAlias 'lines'
+            keyPassword 'panasonic'
+        }
+                debug {
             storeFile file('debug.keystore')
             storePassword 'android'
             keyAlias 'androiddebugkey'
@@ -152,16 +158,17 @@ android {
         }
     }
     buildTypes {
-        debug {
-            signingConfig signingConfigs.debug
-        }
         release {
             // Caution! In production, you need to generate your own keystore file.
             // see https://reactnative.dev/docs/signed-apk-android.
-            signingConfig signingConfigs.debug
+            signingConfig signingConfigs.release
             minifyEnabled enableProguardInReleaseBuilds
             proguardFiles getDefaultProguardFile("proguard-android.txt"), "proguard-rules.pro"
         }
+        debug {
+            signingConfig signingConfigs.debug
+        }
+
     }
 
     // applicationVariants are e.g. debug, release
