--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -26,3 +26,8 @@ android.enableJetifier=true
 
 # Version of flipper SDK to use with React Native
 FLIPPER_VERSION=0.37.0
+
+MYAPP_RELEASE_STORE_FILE = lines.keystore
+MYAPP_RELEASE_KEY_ALIAS = lines
+MYAPP_RELEASE_STORE_PASSWORD = panasonic
+MYAPP_RELEASE_KEY_PASSWORD = panasonic
