--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-native-reanimated": "^1.10.1",
     "react-native-safe-area-context": "^3.1.1",
     "react-native-screens": "^2.9.0",
+    "react-native-svg": "^12.1.0",
     "react-native-webview": "^10.3.3",
     "react-redux": "^7.2.1",
     "redux": "^4.0.5"
