--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-native-reanimated": "^1.10.1",
     "react-native-safe-area-context": "^3.1.1",
     "react-native-screens": "^2.9.0",
+    "react-native-shadow": "^1.2.2",
     "react-native-svg": "^12.1.0",
     "react-native-webview": "^10.3.3",
     "react-redux": "^7.2.1",
@@ -34,6 +35,7 @@
     "@babel/runtime": "^7.8.4",
     "@react-native-community/eslint-config": "^1.1.0",
     "@types/react-native": "^0.63.2",
+    "@types/react-redux": "^7.1.9",
     "babel-eslint": "^10.1.0",
     "babel-jest": "^25.1.0",
     "eslint": "^7.2.0",
