--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "eventemitter3": "^4.0.4",
     "gsap": "^3.4.2",
     "gsap-rn": "0.0.14",
+    "lodash": "^4.17.20",
     "react": "16.13.1",
     "react-native": "0.63.2",
     "react-native-canvas": "^0.1.37",
@@ -34,6 +35,7 @@
     "@babel/core": "^7.8.4",
     "@babel/runtime": "^7.8.4",
     "@react-native-community/eslint-config": "^1.1.0",
+    "@types/lodash": "^4.14.159",
     "@types/react-native": "^0.63.2",
     "@types/react-redux": "^7.1.9",
     "babel-eslint": "^10.1.0",
