--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "react-native-svg": "^12.1.0",
     "react-native-webview": "^10.3.3",
     "react-redux": "^7.2.1",
-    "redux": "^4.0.5"
+    "redux": "^4.0.5",
+    "use-previous": "^1.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.8.4",
