--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-navigation/native": "^5.7.2",
     "@react-navigation/stack": "^5.8.0",
     "eventemitter3": "^4.0.4",
+    "firebase": "^7.18.0",
     "gsap": "^3.4.2",
     "gsap-rn": "0.0.14",
     "lodash": "^4.17.20",
@@ -21,7 +22,7 @@
     "react-native": "0.63.2",
     "react-native-canvas": "^0.1.37",
     "react-native-gesture-handler": "^1.7.0",
-    "react-native-portal": "^1.3.0",
+    "react-native-portalize": "^1.0.3",
     "react-native-reanimated": "^1.10.1",
     "react-native-safe-area-context": "^3.1.1",
     "react-native-screens": "^2.9.0",
