--- a/ios/Podfile
+++ b/ios/Podfile
@@ -10,6 +10,8 @@ target 'LinesGame' do
 
   pod 'react-native-webview', :path => '../node_modules/react-native-webview'
 
+  pod 'RNSVG', :path => '../node_modules/react-native-svg'
+
   target 'LinesGameTests' do
     inherit! :complete
     # Pods for testing
