--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-native-screens": "^2.9.0",
     "react-native-shadow": "^1.2.2",
     "react-native-svg": "^12.1.0",
+    "react-native-svg-transformer": "^0.14.3",
     "react-native-webview": "^10.3.3",
     "react-redux": "^7.2.1",
     "redux": "^4.0.5",
