ESLint support, second font, alert's overlay and priorities

--- a/ios/LinesGame/Info.plist
+++ b/ios/LinesGame/Info.plist
@@ -73,6 +73,7 @@
 		<string>Barlow-SemiBoldItalic.ttf</string>
 		<string>Barlow-Thin.ttf</string>
 		<string>Barlow-ThinItalic.ttf</string>
+		<string>FredokaOne-Regular.ttf</string>
 	</array>
 </dict>
 </plist>
