--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@react-navigation/stack": "^5.8.0",
     "array2d": "0.0.5",
     "eventemitter3": "^4.0.5",
+    "framer-motion": "^2.7.7",
     "gsap": "^3.4.2",
     "gsap-rn": "0.0.14",
     "lodash": "^4.17.20",
@@ -25,9 +26,10 @@
     "react": "16.13.1",
     "react-native": "^0.63.2",
     "react-native-canvas": "^0.1.37",
+    "react-native-flash-message": "^0.1.16",
     "react-native-gesture-handler": "^1.7.0",
     "react-native-portalize": "^1.0.3",
-    "react-native-reanimated": "^1.10.1",
+    "react-native-reanimated": "^2.0.0-alpha.7",
     "react-native-safe-area-context": "^3.1.1",
     "react-native-screens": "^2.9.0",
     "react-native-shadow": "^1.2.2",
@@ -58,6 +60,7 @@
     "eslint-plugin-prettier": "^3.1.4",
     "eslint-plugin-react": "^7.21.2",
     "eslint-plugin-react-hooks": "^4.1.2",
+    "firebase": "^7.24.0",
     "hoist-non-react-statics": "^3.3.2",
     "jest": "^25.1.0",
     "metro-react-native-babel-preset": "^0.59.0",
