Dark mode and relative units

--- a/ios/LinesGame/Info.plist
+++ b/ios/LinesGame/Info.plist
@@ -74,6 +74,7 @@
 		<string>Barlow-Thin.ttf</string>
 		<string>Barlow-ThinItalic.ttf</string>
 		<string>FredokaOne-Regular.ttf</string>
+		<string>Signika-Regular.ttf</string>
 	</array>
 </dict>
 </plist>
