--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@react-native-community/blur": "^3.6.0",
     "@react-native-community/masked-view": "^0.1.10",
+    "@react-native-community/netinfo": "^5.9.7",
     "@react-native-firebase/app": "^8.3.1",
     "@react-native-firebase/database": "^7.4.2",
     "@react-native-firebase/firestore": "^7.5.3",
@@ -24,17 +26,19 @@
     "lodash": "^4.17.20",
     "random-int": "^2.0.1",
     "react": "16.13.1",
-    "react-native": "^0.63.2",
-    "react-native-canvas": "^0.1.37",
+    "react-native-dynamic": "^1.0.0",
+    "react-native-extended-stylesheet": "^0.12.0",
     "react-native-flash-message": "^0.1.16",
     "react-native-gesture-handler": "^1.7.0",
+    "react-native-linear-gradient": "^2.5.6",
     "react-native-portalize": "^1.0.3",
-    "react-native-reanimated": "^2.0.0-alpha.7",
+    "react-native-reanimated": "^2.0.0-alpha.8",
     "react-native-safe-area-context": "^3.1.1",
     "react-native-screens": "^2.9.0",
     "react-native-shadow": "^1.2.2",
     "react-native-svg": "^12.1.0",
     "react-native-svg-transformer": "^0.14.3",
+    "react-native-viewport-units": "0.0.5",
     "react-native-webview": "^10.3.3",
     "react-redux": "^7.2.1",
     "redux": "^4.0.5",
@@ -63,8 +67,10 @@
     "firebase": "^7.24.0",
     "hoist-non-react-statics": "^3.3.2",
     "jest": "^25.1.0",
+    "metro-config": "^0.63.0",
     "metro-react-native-babel-preset": "^0.59.0",
     "prettier": "^2.0.5",
+    "react-native": "^0.63.3",
     "react-test-renderer": "16.13.1",
     "typescript": "^4.0.3"
   },
